# imagenet_predictions_embedded

./: .gitignore  Dockerfile  Makefile  main.py  project_structure.txt  pyproject.toml  readme.md
pt_resnet50_imagenet_224_224_8.2G_3.0/: readme.md  requirement_upgraded.txt  requirements.txt  requirements_docker.txt  requirements_upgraded.txt
pt_resnet50_imagenet_224_224_8.2G_3.0/code/: run_test_float.sh  run_test_quantized.sh  util.py
pt_resnet50_imagenet_224_224_8.2G_3.0/code/models/: resnet50.py  resnet50_qat_model.py
pt_resnet50_imagenet_224_224_8.2G_3.0/code/quantization/: arch.json  quantize_resnet50.py
pt_resnet50_imagenet_224_224_8.2G_3.0/code/quantization_output/: ResNet.py  bias_corr.pth
pt_resnet50_imagenet_224_224_8.2G_3.0/code/quantization_output/compiled/: md5sum.txt  meta.json
pt_resnet50_imagenet_224_224_8.2G_3.0/code/quantization_output/deploy_check_data_int/ResNet/: shape.txt
pt_resnet50_imagenet_224_224_8.2G_3.0/code/test/: eval_imagenet.py  inference.py  inference_vitis.py
pt_resnet50_imagenet_224_224_8.2G_3.0/code/train/: resnet50_qat.py  resnet50_train.py
pt_resnet50_imagenet_224_224_8.2G_3.0/quantized/: quant_info.json
